Update dependencies for quote service. Update streaming for the dune service

--- a/quotes-service/src/main/resources/application.properties
+++ b/quotes-service/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 io.dekorate.docker.group=gamussa
-
 grpc.server.port=6565
 #grpc.server.security.enabled=true
 #grpc.server.security.certificateChain=file:/Users/viktor.gamov/projects/kong/quotes-service/server.crt
 #grpc.server.security.privateKey=file:/Users/viktor.gamov/projects/kong/quotes-service/server.key
-
+grpc.server.dune.stream.rate=2
+grpc.server.dune.stream.limit=20
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.probes.enabled=true
 management.health.livenessState.enabled=true
@@ -16,6 +16,5 @@ management.info.env.enabled=true
 info.app.name=Quotes Service
 info.app.description=Random pop-culture references and quotes
 info.app.version=0.0.5
-
 spring.banner.image.location=classpath:banner-kong.jpg
 spring.banner.image.pixelmode=block
