--- a/quotes-service/build.gradle
+++ b/quotes-service/build.gradle
@@ -3,14 +3,13 @@ plugins {
   id 'io.spring.dependency-management' version '1.0.15.RELEASE'
   id 'java'
   id 'idea'
-  //id 'org.springframework.experimental.aot' version '0.10.5'
   id 'net.researchgate.release' version '2.8.1'
   id 'com.google.protobuf' version '0.8.18'
   id 'com.gorylenko.gradle-git-properties' version '2.4.1'
 }
 
 group = 'io.kong.developer'
-sourceCompatibility = '11'
+sourceCompatibility = '17'
 
 configurations {
   compileOnly {
@@ -35,6 +34,7 @@ dependencies {
 
   //grpc stuff
   implementation 'net.devh:grpc-server-spring-boot-starter:2.14.0.RELEASE'
+  implementation "jakarta.annotation:jakarta.annotation-api:1.3.5"
   implementation 'com.google.protobuf:protobuf-java:3.21.7'
   implementation 'io.grpc:grpc-stub:1.52.0'
 
