--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -53,7 +53,7 @@ jobs:
         run: docker manifest create gamussa/reactive-quote-service:0.0.5-SNAPSHOT --amend gamussa/reactive-quote-service:latest-amd64 --amend gamussa/reactive-quote-service:latest-arm64
 
       - name: Push Manifest to Docker Hub
-        run: docker manifest push gamussa/reactive-quote-service:latest
+        run: docker manifest push gamussa/reactive-quote-service:0.0.5-SNAPSHOT
   
   kafka-app:
     runs-on: ubuntu-latest
