--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -10,6 +10,50 @@ on:
     branches: [ main ]
 
 jobs:
+  native-quotes-service:
+    defaults:
+      run:
+        working-directory: kong-builders/11-10-2021/native-quote-service
+    runs-on: ubuntu-latest
+    
+    name: Build (jar and docker) Quotes Service app (with native binary flavor)
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up JDK 17
+        uses: actions/setup-java@v2
+        with:
+          java-version: 17
+          distribution: 'liberica'
+
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+      - name: Build with Gradle
+        run: ./gradlew build
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+
+      - name: Build Docker Image AMD64
+        run: ./gradlew bootBuildImage --imageName gamussa/native-quote-service:latest-amd64
+
+      - name: Build Docker Image ARM64
+        run: ./gradlew bootBuildImage --imageName gamussa/native-quote-service:latest-arm64
+
+      - name: Push to Docker Hub
+        run: docker push gamussa/native-quote-service:latest-amd64 && docker push gamussa/native-quote-service:latest-arm64
+
+      - name: Create multiarch manifest
+        run: docker manifest create gamussa/native-quote-service:0.0.5-SNAPSHOT --amend gamussa/native-quote-service:latest-amd64 --amend gamussa/native-quote-service:latest-arm64
+
+      - name: Push Manifest to Docker Hub
+        run: docker manifest push gamussa/native-quote-service:0.0.5-SNAPSHOT
+
   
   quotes-service:
     defaults:
@@ -79,22 +123,3 @@ jobs:
       - name: Build with Gradle
         run: ./gradlew build -x test
   
-  misc:
-    runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        java: [ '11', '17' ]
-    name: Misc. projects Running tests with Java ${{ matrix.Java }}
-    steps:
-      - uses: actions/checkout@v2
-      - name: Set up JDK ${{ matrix.Java }}
-        uses: actions/setup-java@v2
-        with:
-          java-version: ${{ matrix.java }}
-          distribution: 'liberica'
-      - name: <native-quote-service> Grant execute permission for gradlew
-        run: cd ./kong-builders/11-10-2021/native-quote-service && chmod +x gradlew
-      - name: <native-quote-service> Build with Gradle
-        run: cd ./kong-builders/11-10-2021/native-quote-service && ./gradlew build -x test
-
