--- a/kong-builders/11-10-2021/native-quote-service/src/main/resources/application.properties
+++ b/kong-builders/11-10-2021/native-quote-service/src/main/resources/application.properties
@@ -1,1 +1,13 @@
-
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.probes.enabled=true
+management.health.livenessState.enabled=true
+management.health.readinessState.enabled=true
+management.info.java.enabled=true
+management.info.git.enabled=true
+management.info.env.enabled=true
+## Configuring info endpoint
+info.app.name=Native Quotes Service
+info.app.description=Random pop-culture references and quotes (as a native app)
+info.app.version=0.0.5-SNAPSHOT
+spring.banner.image.location=classpath:banner-kong.jpg
+spring.banner.image.pixelmode=block
