--- a/quotes-service/build.gradle
+++ b/quotes-service/build.gradle
@@ -1,6 +1,7 @@
 plugins {
-  id 'org.springframework.boot' version '2.7.9'
-  id 'io.spring.dependency-management' version '1.0.15.RELEASE'
+  id 'org.springframework.boot' version '3.0.4'
+  id 'io.spring.dependency-management' version '1.1.0'
+  id 'org.graalvm.buildtools.native' version '0.9.20'  
   id 'java'
   id 'idea'
   id 'net.researchgate.release' version '2.8.1'
@@ -25,7 +26,7 @@ repositories {
 dependencies {
   implementation 'org.springframework.boot:spring-boot-starter-webflux'
   implementation 'org.springframework.boot:spring-boot-starter-actuator'
-  implementation "net.datafaker:datafaker:1.4.0"
+  implementation "net.datafaker:datafaker:1.8.0"
   implementation 'io.dekorate:kubernetes-spring-starter:2.9.3'
   annotationProcessor 'io.dekorate:kubernetes-annotations:2.9.3'
 
@@ -33,10 +34,14 @@ dependencies {
   annotationProcessor 'org.projectlombok:lombok'
 
   //grpc stuff
-  implementation 'net.devh:grpc-server-spring-boot-starter:2.14.0.RELEASE'
+  implementation("net.devh:grpc-server-spring-boot-starter:2.14.0.RELEASE") {
+    exclude(module: "grpc-netty-shaded", group: "io.grpc")
+  }
+
   implementation "jakarta.annotation:jakarta.annotation-api:1.3.5"
   implementation 'com.google.protobuf:protobuf-java:3.21.7'
-  implementation 'io.grpc:grpc-stub:1.52.0'
+  implementation 'io.grpc:grpc-stub:1.53.0'
+  implementation 'io.grpc:grpc-netty:1.53.0'
 
   testImplementation 'org.springframework.boot:spring-boot-starter-test'
   testImplementation 'io.projectreactor:reactor-test'
@@ -63,7 +68,7 @@ protobuf {
   }
   plugins {
     grpc {
-      artifact = 'io.grpc:protoc-gen-grpc-java:1.52.0'
+      artifact = 'io.grpc:protoc-gen-grpc-java:1.53.0'
     }
   }
   generateProtoTasks {
@@ -83,3 +88,12 @@ sourceSets {
 springBoot {
   buildInfo()
 }
+
+bootBuildImage {
+  builder = 'dashaun/builder:tiny'
+  environment = ['BP_NATIVE_IMAGE': 'true']
+  imageName = "gamussa/native-quote-service:0.0.5-SNAPSHOT"
+  verboseLogging = true
+}
+  
+  
