demo is ready (KGO 1.0.2)

--- a/kgo/default/01_gateway-class.yaml
+++ b/kgo/default/01_gateway-class.yaml
@@ -4,3 +4,9 @@ metadata:
   name: kong
 spec:
   controllerName: konghq.com/gateway-operator
+  parametersRef:
+    group: gateway-operator.konghq.com
+    kind: GatewayConfiguration
+    name: kong
+    namespace: default
+    
