--- a/kgo/app/myhttpbin_httproute.yaml
+++ b/kgo/app/myhttpbin_httproute.yaml
@@ -2,6 +2,7 @@ kind: HTTPRoute
 apiVersion: gateway.networking.k8s.io/v1beta1
 metadata:
   name: httpbin-go
+  namespace: default
   annotations:
     konghq.com/strip-path: "true"
 spec:
