--- a/gateway4mesh/kuma/clusterissuer.yaml
+++ b/gateway4mesh/kuma/clusterissuer.yaml
@@ -14,7 +14,7 @@ spec:
           ingress:
             podTemplate:
               metadata:
-                annotations:
+                labels:
                   kuma.io/sidecar-injection: "false"
             class: kong
             
