--- a/gateway4mesh/kuma/mesh/mesh.yaml
+++ b/gateway4mesh/kuma/mesh/mesh.yaml
@@ -34,4 +34,4 @@ metadata:
 #        type: zipkin
 #        sampling: 100.0
 #        conf:
-#          url: http://jaeger-collector.mesh-observabilitymesh-observability:9411/api/v2/spans
+#          url: http://jaeger-collector.mesh-observabilit:9411/api/v2/spans
